--- a/config/database.yml
+++ b/config/database.yml
@@ -21,5 +21,9 @@ test:
   database: storage/test.sqlite3
 
 production:
-  <<: *default
-  database: storage/production.sqlite3
+  adapter: postgresql
+encoding: unicode
+pool: <%= ENV.fetch("RAILS_MAX_THREADS") 5 %>
+database: blog_spot_app_production
+username: blog_spot_app
+password: <%= ENV['BLOG_SPOT_APP_DATABASE_PASSWORD'] %>
