--- a/config/database.yml
+++ b/config/database.yml
@@ -22,8 +22,8 @@ test:
 
 production:
   adapter: postgresql
-encoding: unicode
-pool: <%= ENV.fetch("RAILS_MAX_THREADS") 5 %>
-database: blog_spot_app_production
-username: blog_spot_app
-password: <%= ENV['BLOG_SPOT_APP_DATABASE_PASSWORD'] %>
+  encoding: unicode
+  pool: <%= ENV.fetch("RAILS_MAX_THREADS", 5) %>
+  database: blog_spot_app_production
+  username: blog_spot_app
+  password: <%= ENV['BLOG_SPOT_APP_DATABASE_PASSWORD'] %>
